# ssl-vision

./: CMakeLists.txt
cmake/: FindBaslerPylon.cmake  FindGenICam.cmake
src/app/: capture_thread.cpp  capture_thread.h
src/app/stacks/: multistack_robocup_ssl.cpp  multistack_robocup_ssl.h
src/shared/: CMakeLists.txt.inc
src/shared/capture/: capture_basler.cpp  capture_basler.h
src/shared/net/: netraw.cpp  netraw.h
